basic data parse

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0"
+  },
+  "dependencies": {
+    "puppeteer": "^24.11.0"
   }
 }
