--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/jsdom": "^21.1.7",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
     "tsx": "^4.20.3",
@@ -19,6 +20,9 @@
     "typescript-eslint": "^8.35.0"
   },
   "dependencies": {
+    "dotenv": "^16.6.0",
+    "grammy": "^1.36.3",
+    "jsdom": "^26.1.0",
     "puppeteer": "^24.11.0"
   }
 }
