--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "dotenv": "^16.6.0",
     "grammy": "^1.36.3",
     "jsdom": "^26.1.0",
-    "puppeteer": "^24.11.0"
+    "node-cron": "^4.1.1",
+    "pg-promise": "^11.14.0",
+    "puppeteer": "^24.11.0",
+    "sequelize": "^6.37.7"
   }
 }
