--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/express": "^5.0.3",
     "@types/jsdom": "^21.1.7",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "dotenv": "^16.6.0",
+    "express": "^5.1.0",
     "grammy": "^1.36.3",
     "jsdom": "^26.1.0",
     "node-cron": "^4.1.1",
